<resources>
    <string name="app_name">ChatFusion</string>
    <string name="sr_chat">ChatFusion</string>
    <string name="todo">TODO</string>
    <string name="welcome_txt">Welcome</string>
    <string name="please_sign_txt">Please Sign-in to continue</string>
    <string name="login">Login</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="login_with_google">Login with Google</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? SignUp</string>
    <string name="complete_pr">SIGN UP</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="search_a_friend">Search a friend</string>
    <string name="write_a_message"><font size="14">Write a message</font></string>
    <string name="mute_notification">Mute Notification</string>
    <string name="custom_notification">Custom Notification</string>
    <string name="mutual_friend">Mutual Friend</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="about_me">About Me</string>
    <string name="search">Search</string>
    <string name="we_can_t_find_any_user_matching_your_search">We can\'t find any user matching your search</string>
    <string name="no_result_found">No Result Found</string>
    <string name="received_requests">Received Requests</string>
    <string name="sent_requests">Sent Requests</string>
    <string name="no_messages_yet">No messages, yet</string>
    <string name="no_messages_in_your_inbox_yet_start_a_new_conversation">No messages in your inbox yet! Start a new conversation</string>
    <string name="send_files">Send Files</string>
    <string name="camera">Camera</string>
    <string name="video">Video</string>
    <string name="pdf">PDF</string>
    <string name="write_caption_here">Write Caption Here</string>
    <string name="loading">Loading...</string>
    <string name="add_friend">Add Friend</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="add_random">Add Random</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_user_title">No Users Available to Send Requests!</string>
    <string name="no_user_description">YCurrently, there are no users available to send friend requests. Please check back later or try refreshing your feed to see if new users have joined. In the meantime, you can update your profile or explore other features of the app.</string>
    <string name="full_screen">Full Screen</string>
    <string name="send">Send</string>
    <string name="get_room_id">Get Room Id</string>
</resources>