<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Authentication.LoginActivity"
    android:background="@color/primary_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="25dp"
            android:paddingTop="100dp"
            android:gravity="center_horizontal">

            <View
                android:layout_width="108.15dp"
                android:layout_height="108.19dp"
                android:elevation="4dp"
                android:background="@drawable/icon__messages_2_"
                />

            <TextView
                android:id="@+id/welcome_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                style="@style/welcome_txt_style"
                android:text="@string/welcome_txt"
                android:textAllCaps="true"
                />

            <TextView
                android:id="@+id/please_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_sign_txt"
                android:textAppearance="@style/please_sign_txt_style" />

            <View
                android:id="@+id/view_divider_1"
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_marginTop="18dp"
                android:background="@color/secondary_color"/>

            <TextView
                android:id="@+id/login_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/login"
                android:textAppearance="@style/login_txt_style"
                android:layout_gravity="start"/>

            <EditText
                android:id="@+id/email_edit_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:drawableStart="@drawable/baseline_email_24"
                android:hint="@string/enter_email_address"
                android:inputType="textEmailAddress"
                style="@style/login_edit_text_style"/>

            <EditText
                android:id="@+id/password_edit_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:drawableStart="@drawable/icons_password"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                style="@style/login_edit_text_style"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_marginTop="5dp"
                android:textColor="@color/secondary_color"
                android:textSize="14sp"
                android:layout_gravity="right"/>



            <androidx.cardview.widget.CardView
                android:id="@+id/nextBtn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/secondary_color">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_arrow_forward_24"
                    android:layout_gravity="center"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_signup"
                android:layout_marginTop="10dp"
                android:textColor="@color/secondary_color"/>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>