<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/no_search_icon"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_result_found"
            android:textSize="24sp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/amaranth"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/we_can_t_find_any_user_matching_your_search"/>
    </LinearLayout>

</RelativeLayout>